--- a/src/index.css
+++ b/src/index.css
@@ -98,3 +98,11 @@ button:disabled:active {
 .error-text {
   color: #b40e0e;
 }
+button:disabled,
+button:disabled:hover,
+button:disabled:active {
+  background-color: #ccc;
+  color: #292929;
+  border: #ccc;
+  cursor: not-allowed;
+}
